--- a/index.html
+++ b/index.html
@@ -54,6 +54,82 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn" type="button" data-menu-open>
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-Group"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- mobile menu -->
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-conteiner">
+          <button class="mobile-menu-close" data-menu-close>
+            <svg class="mobile-menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="mobile-menu-nav-item">
+                <a class="mobile-menu-nav-link" href="">Portfolio</a>
+              </li>
+              <li class="mobile-menu-nav-item">
+                <a class="mobile-menu-nav-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-adres">
+            <ul class="mobile-menu-adres-list">
+              <li class="mobile-menu-adres-item">
+                <a class="mobile-menu-adres-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mobile-menu-adres-item">
+                <a
+                  class="mobile-menu-adres-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div class="mobile-menu-soc-link">
+            <ul class="mobile-soc-list">
+              <li class="mobile-soc-item">
+                <a href="" class="mobile-menu-soc-media">
+                  <svg class="mobile-menu-soc-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-soc-item">
+                <a href="" class="mobile-menu-soc-media"
+                  ><svg class="mobile-menu-soc-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-soc-item">
+                <a href="" class="mobile-menu-soc-media"
+                  ><svg class="mobile-menu-soc-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="mobile-menu-soc-media"
+                  ><svg class="mobile-menu-soc-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- Hero section -->
@@ -131,13 +207,19 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-member">
-              <img
-                class="team-photo"
-                src="./images/markguerrero.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <img
+                  class="team-photo"
+                  srcset="
+                    ./images/team/guero1x-min.jpg  1x,
+                    ./images/team/gueru@2x-min.jpg 2x
+                  "
+                  src="./images/team/guero1x-min.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="value-heder">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-role">Product Designer</p>
@@ -176,7 +258,11 @@
             <li class="team-member">
               <img
                 class="team-photo"
-                src="./images/tomford.jpg"
+                srcset="
+                  ./images/team/ford1x-min.jpg  1x,
+                  ./images/team/ford@2x-min.jpg 2x
+                "
+                src="./images/team/ford1x-min.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -219,7 +305,11 @@
             <li class="team-member">
               <img
                 class="team-photo"
-                src="./images/camilagarcia.jpg"
+                srcset="
+                  ./images/team/garcia1x-min.jpg  1x,
+                  ./images/team/garsia@2x-min.jpg 2x
+                "
+                src="./images/team/garcia1x-min.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -262,7 +352,11 @@
             <li class="team-member">
               <img
                 class="team-photo"
-                src="./images/danielwilson.jpg"
+                srcset="
+                  ./images/team/wilson1x-min.jpg  1x,
+                  ./images/team/wilson@2x-min.jpg 2x
+                "
+                src="./images/team/wilson1x-min.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -313,13 +407,36 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="cover-wrap">
-                <img
-                  class="portfolio-image"
-                  src="./images/bankingapp.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desc-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-desc-1@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-1@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-1@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-image"
+                    src="./images/portfolio/portfolio-desc-1-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -333,13 +450,36 @@
             </li>
             <li class="portfolio-item">
               <div class="cover-wrap">
-                <img
-                  class="portfolio-image"
-                  src="./images/cashlesspayment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desc-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-desc-2@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-2@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-2@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-image"
+                    src="./images/portfolio/portfolio-desc-2-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -353,13 +493,37 @@
             </li>
             <li class="portfolio-item">
               <div class="cover-wrap">
-                <img
-                  class="portfolio-image"
-                  src="./images/meditationimg.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desc-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-desc-3@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-3@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-3@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-image"
+                    src="./images/portfolio/portfolio-desc-3-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -374,13 +538,36 @@
             </li>
             <li class="portfolio-item">
               <div class="cover-wrap">
-                <img
-                  class="portfolio-image"
-                  src="./images/taxiservice.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desc-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-desc-4@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-4@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-4@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-image"
+                    src="./images/portfolio/portfolio-desc-4-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -394,13 +581,37 @@
             </li>
             <li class="portfolio-item">
               <div class="cover-wrap">
-                <img
-                  class="portfolio-image"
-                  src="./images/screenillustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desc-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-desc-5@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-5@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-5@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-image"
+                    src="./images/portfolio/portfolio-desc-5-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -414,13 +625,36 @@
             </li>
             <li class="portfolio-item">
               <div class="cover-wrap">
-                <img
-                  class="portfolio-image"
-                  src="./images/onlinecourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desc-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-desc-6@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-6@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-6@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-image"
+                    src="./images/portfolio/portfolio-desc-6-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -452,31 +686,31 @@
         </div>
         <div class="footer-right-side">
           <p class="team-soc-title">Social media</p>
-          <ul class="team-soc-list">
-            <li class="team-soc-item">
-              <a href="" class="team-soc-media"
-                ><svg class="team-soc-svg" width="24" height="24">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link"
+                ><svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-soc-item">
-              <a href="" class="team-soc-media"
-                ><svg class="team-soc-svg" width="24" height="24">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link"
+                ><svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-soc-item">
-              <a href="" class="team-soc-media"
-                ><svg class="team-soc-svg" width="24" height="24">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link"
+                ><svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="team-soc-item">
-              <a href="" class="team-soc-media"
-                ><svg class="team-soc-svg" width="24" height="24">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link"
+                ><svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
@@ -591,16 +825,17 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="privacy-policy-link">Privacy Policy</a></label
-            >
+              <span>
+                I accept the terms and conditions of the
+                <a href="" class="privacy-policy-link">Privacy Policy</a>
+              </span>
+            </label>
           </div>
           <button type="submit" class="modal-button">Send</button>
         </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
-
-    <!-- end -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
